[package]
name = "utils"
version = "0.1.0"
authors = ["Anthony Miyaguchi <amiyaguchi@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = { git = "https://github.com/acmiyaguchi/ring.git", branch="ed25519-wasm", features=["wasm32_c"] }
base64 = "0.13.0"
serde_json = "1.0"